--- a/docs/docs/tools/cli.mdx
+++ b/docs/docs/tools/cli.mdx
@@ -76,3 +76,7 @@ It should now be available for use when you run `npm run type-gen` or `yarn type
 ### Detailed Command Usage
 
 See the generated [GrowthBook CLI command documentation on Github <ExternalLink />](https://github.com/growthbook/growthbook-cli#commands).
+
+### Examples
+
+- [Example implementation of a TypeScript project that uses the GrowthBook CLI <ExternalLink />](https://github.com/growthbook/examples/tree/main/vanilla-typescript)
