Type-safe features in the SDK & CLI docs (#1023)
* add docs for the growthbook CLI

* implement getTypedFeatureValue()

* implement evalTypedFeature()

* implement runTypedExperiment()

* modify GrowthBook class to support enhancing getFeatureType() & other methods w/ optional types

* reorder K,V generic args

* add tests to ensure same cases work without types

* restore run()

* reorder K,V -> V,K for getFeatureValue() & default K=string to not break existing typed implementations

* restore Experiment type

* lint

* type isOn, isOff

* mark feature(key) as deprecated

* add docs for strictly-typed GrowthBook class

* lint

* version bump sdk

* docs: update link on CLI page to TS generated types docs

* add links to TS project example

--- a/docs/docs/lib/js.mdx
+++ b/docs/docs/lib/js.mdx
@@ -3,7 +3,10 @@ title: Javascript SDK
 description: GrowthBook SDK for Javascript
 sidebar_label: Javascript
 slug: js
+toc_max_heading_level: 5
 ---
+
+import ExternalLink from '@site/src/components/ExternalLink'
 
 # Javascript
 
@@ -203,7 +206,14 @@ Once you define the callback, just use feature flags like normal in your code. I
 const newLogin = gb.isOn("new-signup-form");
 ```
 
-## Typescript
+## TypeScript
+
+You can use TypeScript to varying degrees of strictness based on your preference:
+
+- Basic support with type inference
+- More strict support with strongly-typed feature definitions
+
+### Type Inference
 
 When using `getFeatureValue`, the type of the feature is inferred from the fallback value you provide.
 
@@ -254,6 +264,59 @@ import type {
   LocalStorageCompat,
 } from "@growthbook/growthbook";
 ```
+
+### Strongly-typed feature definitions
+
+As of version `0.22.0` you can use strongly-typed feature definitions, which will allow you to pass a typed feature definition as a generic argument when creating the `GrowthBook` instance.
+
+When providing typed feature definitions, the following methods are strictly typed:
+
+- `getFeatureValue(key, defaultValue)`
+- `evalFeature(key)`
+- `isOn(key)`
+- `isOff(key)`
+
+```ts
+// This can be generated with the CLI
+type MyAppFeatures = {
+  dark_mode: boolean;
+  sample_json: Record<string, unknown>;
+  greeting: string;
+};
+
+const features = {
+  // Features from the SDK endpoint, as described above
+};
+const context: Context = {
+  features,
+  attributes: {
+    id: "user-abc123",
+    country: "france",
+  },
+};
+
+const growthbook = new GrowthBook<MyAppFeatures>(context);
+
+const featureResult = growthbook.evalFeature("greeting");
+const shouldUseDarkMode = growthbook.getFeatureValue("dark_mode", false);
+```
+
+When using strongly typed feature definitions when creating your `GrowthBook` instance, you will get the following benefits:
+
+- You will only be allowed to pass in known keys to the typed methods
+- `getFeatureValue(key, defaultValue)` will find the reference for the provided key in the `AppFeatures` passed into the generic parameter when constructing your `GrowthBook` instance. This means if you try to pass in a string value into `defaultValue` when the known type should be a boolean, you will get a type error.
+
+![Screenshot of TypeScript support in an IDE that shows hints offering suggested keys for valid types for the method getFeatureValue](../../static/images/lib-js-typescript-01.png)
+_Screenshot of TypeScript support in an IDE that shows hints offering suggested keys for valid types for the method `getFeatureValue(key, defaultValue)`._
+
+![Screenshot of TypeScript support in an IDE that shows an error when trying to use an unknown key in the method evalFeature](../../static/images/lib-js-typescript-02.png)
+_Screenshot of TypeScript support in an IDE that shows an error when trying to use an unknown key in the method `evalFeature(key)`._
+
+#### Generating strictly-typed feature definitions with the CLI
+
+To generate strictly-typed feature definitions for your project with the CLI, please see the [documentation for the Command Line Interface](/tools/cli).
+
+You can see an example project that implements the GrowthBook CLI to generate type definition and uses those generated type definitions [here <ExternalLink />](https://github.com/growthbook/examples/tree/main/vanilla-typescript).
 
 ## GrowthBook Instance (reference)
 
